Fixing horizontal scroll bar on some pages

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -3,7 +3,7 @@
   color: white;
   font-size: 18px;
   font-weight: bold;
-  width: 100vw;
+  width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: row;
